# archi

./: CMakeLists.txt  README.MD  conanfile.txt  profile_debug.conan  profile_release.conan
src/: archiveAlgorithm.cpp  archiveAlgorithm.hpp  archiver.hpp  huffman.cpp  huffman.hpp  huffmanArchiveAlgorithm.cpp  huffmanArchiveAlgorithm.hpp  huffmanBinaryNode.hpp  objectID.cpp  objectID.hpp  serializable.cpp  serializable.hpp  serializableFile.cpp  serializableFile.hpp
tests/: CMakeLists.txt  huffmanBinaryNode_test.cpp  huffman_test.cpp  serializableFile_test.cpp
